# ML

./: .gitignore  Pipeline.ipynb  README.md  classification.ipynb  mse.ipynb  prediction.ipynb  pyproject.toml  titanic-cardinality-feature-engineering.ipynb  titanic-missling-values.ipynb  titanic_clean.txt  wine.data
ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
